@@ -1,0 +1,10 @@
+#ifndef POKEMON_SPECIES_H
+#define POKEMON_SPECIES_H
+
+
+class PokemonSpeciesData {
+
+};
+
+
+#endif
